# src/features/translate/translate.types.ts
@@ -1,0 +1,17 @@
+import type { Definition } from "../kbbi/kbbi.types";
+
+export interface TranslatedDefinition extends Definition {
+  translation: string;
+}
+
+export interface TranslatedEntry {
+  headword: string;
+  definitions: TranslatedDefinition[];
+}
+
+export interface TranslateResult {
+  word: string;
+  from: string;
+  to: string;
+  entries: TranslatedEntry[];
+}
